--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -33,17 +33,18 @@
 <script src="calendar.js"></script>
 <script>
     new Calendar({
+        // 用户传入实际的数据
         container : 'container',
-        beginTime : [],
-        endTime : [],
-        recentTime : [],
+        beginTime : [2017,4,30],//如空数组默认设置成1970年1月1日开始,数组的每一位分别是年月日。
+        endTime : [2018,3,13],//如空数组默认设置成次年12月31日,数组的每一位分别是年月日。
+        recentTime : [2017,5,2],//如空数组默认设置成当月1日,数组的每一位分别是年月日。
         isSundayFirst : true, // 周日是否要放在第一列
         isShowNeighbor: true, // 是否展示相邻月份的月尾和月头
         isToggleBtn: false, // 是否展示左右切换按钮
         isChinese: true, // 是否是中文
         monthType: 1, // 0:1月, 1:一月, 2:Jan, 3: April
+        canViewDisabled: true, // 是否可以阅读不在范围内的月份
         beforeRender: function(){
-
         },
         success: function(arr){
             alert(arr);
