--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 <div id="container">
-    <div id="targetContainer">
-        <div id="" class="calendar-title">
-            <span id="container-calendar-title-left" class="calendar-title-left">&#xe64f;</span>
-            <span id="container-calendar-title-right" class="calendar-title-right">&#xe64e;</span>
-            <b class="calendar-title-center"></b>
+    <!--<div id="targetContainer">
+        <div class="calendar-title">
+            <span id="containerCalendarTitleLeft" class="calendar-title-left">&#xe64f;</span>
+            <span id="containerCalendarTitleRight" class="calendar-title-right">&#xe64e;</span>
+            <b id="containerTitleCenter"></b>
         </div>
-        <div id="box" class="calendar-box">
+        <div id="containerBox" class="calendar-box">
             <div class="calendar-item calendar-item0">
             </div>
             <div class="calendar-item calendar-item1">
@@ -28,7 +28,7 @@
             <div class="calendar-item calendar-item1">
             </div>
         </div>
-    </div>
+    </div>-->
 </div>
 <script src="calendar.js"></script>
 <script>
