--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -35,13 +35,13 @@
     new Calendar({
         // 用户传入实际的数据
         container : 'container',
-        beginTime : [2017,4,30],//如空数组默认设置成1970年1月1日开始,数组的每一位分别是年月日。
-        endTime : [2018,12,13],//如空数组默认设置成次年12月31日,数组的每一位分别是年月日。
-        recentTime : [2017,10,2],//如空数组默认设置成当月1日,数组的每一位分别是年月日。
+        beginTime : [2017,10,1],//如空数组默认设置成1970年1月1日开始,数组的每一位分别是年月日。
+        endTime : [2018,1,13],//如空数组默认设置成次年12月31日,数组的每一位分别是年月日。
+        recentTime : [2018,1,2],//如空数组默认设置成当月1日,数组的每一位分别是年月日。
         isSundayFirst : true, // 周日是否要放在第一列
-        isShowNeighbor: false, // 是否展示相邻月份的月尾和月头
+        isShowNeighbor: true, // 是否展示相邻月份的月尾和月头
         isToggleBtn: false, // 是否展示左右切换按钮
-        isChinese: false, // 是否是中文
+        isChinese: true, // 是否是中文
         monthType: 1, // 0:1月, 1:一月, 2:Jan, 3: April
         canViewDisabled: true, // 是否可以阅读不在范围内的月份 ???
         beforeRenderArr: [{
@@ -59,6 +59,7 @@
             }]
         }
     });
+
 </script>
 </body>
 </html>
