--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -58,10 +58,10 @@
 		recentTime: [2018, 1, 2],//如空数组默认设置成当月1日,数组的每一位分别是年月日。
 		isSundayFirst: true, // 周日是否要放在第一列
 		isShowNeighbor: true, // 是否展示相邻月份的月尾和月头
-		isToggleBtn: false, // 是否展示左右切换按钮
+		isToggleBtn: true, // 是否展示左右切换按钮
 		isChinese: true, // 是否是中文
 		monthType: 3, // 0:1月, 1:一月, 2:Jan, 3: April
-		canViewDisabled: true, // 是否可以阅读不在范围内的月份 ???
+		canViewDisabled: false, // 是否可以阅读不在范围内的月份
 		beforeRenderArr: [{
 			stamp: 1514736000000,
 			className: 'able2',
@@ -91,7 +91,7 @@
 		isToggleBtn: false, // 是否展示左右切换按钮
 		isChinese: true, // 是否是中文
 		monthType: 3, // 0:1月, 1:一月, 2:Jan, 3: April
-		canViewDisabled: true, // 是否可以阅读不在范围内的月份 ???
+		canViewDisabled: true, // 是否可以阅读不在范围内的月份
 		beforeRenderArr: [{
 			stamp: 1514736000000,
 			className: 'able2',
