--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -48,6 +48,8 @@
 
 <script src="calendar.js"></script>
 <script>
+	console.log(Calendar);
+
 	new Calendar({
 		// 用户传入实际的数据
 		clickTarget: 'target',
