--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -31,7 +31,7 @@
 		}
 
 		.able1 {
-			background: rgba(255, 255, 255, .8);
+			background: red;
 		}
 
 		.able2 {
@@ -63,8 +63,8 @@
 		monthType: 3, // 0:1月, 1:一月, 2:Jan, 3: April
 		canViewDisabled: false, // 是否可以阅读不在范围内的月份
 		beforeRenderArr: [{
-			stamp: 1514736000000,
-			className: 'able2',
+			stamp: 1512057600000,
+			className: 'able1',
 		}],
 		success: function (item, arr) {
 			console.log(item, arr);
@@ -93,7 +93,7 @@
 		monthType: 3, // 0:1月, 1:一月, 2:Jan, 3: April
 		canViewDisabled: true, // 是否可以阅读不在范围内的月份
 		beforeRenderArr: [{
-			stamp: 1514736000000,
+			stamp: 1514822400000,
 			className: 'able2',
 		}],
 		success: function (item, arr) {
