把renderCallback撤回原来的版本

--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -6,7 +6,7 @@
 				content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	<meta name="format-detection" content="telephone=no"/>
 	<meta name="screen-orientation" content="portrait">
-	<title>横屏滑动</title>
+	<title>calendar</title>
 	<link rel="stylesheet" href="calendar.css">
 	<style>
 		#target {
