--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -49,6 +49,7 @@
 <div id="container"></div>
 
 <div id="container2"></div>
+<article style="background: #abcdef; height: 500px"></article>
 
 <script src="calendar.js"></script>
 <script>
@@ -70,8 +71,9 @@
 			stamp: 1512057600000,
 			className: 'able1',
 		}],
-		success: function (item, arr) {
+		success: function (item, arr, cal) {
 			console.log(item, arr);
+			cal.hideBackground();
 		},
 		switchRender: function (year, month, cal) {
 			console.log('计算机识别的 - 年份: ' + year + ' 月份: ' + month);
