--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				'stamp': 1507737600000,
 				'className': 'able1',
 			}];
-			cal.renderCallbackArr(data);
+			//cal.renderCallbackArr(data);
 		}
 	});
 
@@ -116,7 +116,7 @@
 				'stamp': 1507737600000,
 				'className': 'able2',
 			}];
-			cal.renderCallbackArr(data);
+			//cal.renderCallbackArr(data);
 		}
 	});
 </script>
